set(CMAKE_OSX_ARCHITECTURES arm64;x86_64)

add_executable (hello hello.c)
add_executable (hello_ll hello_ll.c)
add_executable (cusexmp cusexmp.c)
add_executable (fioc fioc.c)
add_executable (fioclient fioclient.c)
add_executable (fsel fsel.c)
add_executable (fselclient fselclient.c)
add_executable (fusexmp_fh fusexmp_fh.c)
add_executable (fusexmp fusexmp.c)
add_executable (null null.c)

add_definitions(-D_FILE_OFFSET_BITS=64 -D_REENTRANT)

set(LIBS "-liconv -framework CoreFoundation -framework DiskArbitration")

target_link_libraries (hello LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (hello_ll LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (cusexmp LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (fioc LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (fioclient LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (fsel LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (fselclient LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (fusexmp_fh LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (fusexmp LINK_PUBLIC fuse-t ${LIBS})
target_link_libraries (null LINK_PUBLIC fuse-t ${LIBS})
